# rules_mojo

./: .bazelrc  BUILD.bazel  MODULE.bazel
.github/workflows/: ci.yaml
mojo/: extensions.bzl  mojo_host_platform.bzl  mojo_library.bzl  providers.bzl  toolchain.bzl
mojo/private/: mojo_binary_test.bzl  toolchain.BUILD  utils.bzl
tests/: hello_world_test.mojo  shared_library_test.mojo
tests/cc/: cc_test.mojo
tests/fixits/: BUILD.bazel  fixits.mojo
tests/fixits/package/: package.mojo
tests/python/: basic_python_test.mojo  deps_python_test.mojo  python_shared_library.mojo
tools/: getshas.sh
tools/build_defs/android/: link_hack.bzl
