load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("//mojo:build_settings.bzl", "repeatable_string_flag")

repeatable_string_flag(
    name = "mojo_copt",
    build_setting_default = [],
    visibility = ["//visibility:public"],
)

repeatable_string_flag(
    name = "mojo_package_copt",
    build_setting_default = [],
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "gpu_toolchain_type",
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "experimental_export_fixits",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
